--- a/assets/imgui.ini
+++ b/assets/imgui.ini
@@ -4,7 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Renderer]
-Pos=3,19
+Pos=1,17
 Size=382,178
+Collapsed=0
+
+[Window][Control]
+Pos=2,195
+Size=381,199
+Collapsed=0
+
+[Window][Config]
+Pos=0,394
+Size=384,205
 Collapsed=0
 
