--- a/assets/imgui.ini
+++ b/assets/imgui.ini
@@ -4,17 +4,27 @@ Size=400,400
 Collapsed=0
 
 [Window][Renderer]
-Pos=-2,24
-Size=389,260
+Pos=3,24
+Size=384,308
 Collapsed=0
 
 [Window][Control]
-Pos=3,324
+Pos=2,334
 Size=383,282
 Collapsed=0
 
 [Window][Config]
-Pos=1614,20
+Pos=1611,23
 Size=303,350
+Collapsed=0
+
+[Window][Legs]
+Pos=1610,375
+Size=308,585
+Collapsed=0
+
+[Window][stats]
+Pos=3,619
+Size=382,145
 Collapsed=0
 
