--- a/vc2013/InsectRobotSimulation.vcxproj
+++ b/vc2013/InsectRobotSimulation.vcxproj
@@ -54,7 +54,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\include;"..\..\..\cinder_master\include";..\..\..\cinder_master\blocks\Cinder-ImGui\lib\imgui;..\..\..\cinder_master\blocks\Cinder-ImGui\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\include;..\..\..\cinder_master\include;..\..\..\cinder_master\blocks\Cinder-ImGui\lib\imgui;..\..\..\cinder_master\blocks\Cinder-ImGui\include;..\..\cinder_master\blocks\Cinder-Serial\include;..\..\cinder_master\blocks\Cinder-Serial\lib\serial\include;..\..\cinder_master\blocks\Cinder-Serial\lib\serial\include\serial</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_WIN32_WINNT=0x0601;_WINDOWS;NOMINMAX;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -78,7 +78,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\include;"..\..\..\cinder_master\include";..\..\..\cinder_master\blocks\Cinder-ImGui\lib\imgui;..\..\..\cinder_master\blocks\Cinder-ImGui\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\include;..\..\..\cinder_master\include;..\..\..\cinder_master\blocks\Cinder-ImGui\lib\imgui;..\..\..\cinder_master\blocks\Cinder-ImGui\include;..\..\cinder_master\blocks\Cinder-Serial\include;..\..\cinder_master\blocks\Cinder-Serial\lib\serial\include;..\..\cinder_master\blocks\Cinder-Serial\lib\serial\include\serial</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_WIN32_WINNT=0x0601;_WINDOWS;NOMINMAX;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PrecompiledHeader />
